##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(dul)
#catkin_package()

##############################################################################
# Catkin
##############################################################################

install(DIRECTORY owl/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/owl)

